src/objects/Routing_Email__c.object
<CustomObject>
    <description>Integration Workstream : R5: R-2678</description>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Integration Workstream : R5 : R-2678</description>
        <label>Business Unit</label>
        <picklist>
            <controllingField>Division__c</controllingField>
            <picklistValues>
                <fullName>DMDR - Drives and Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMMG - Motors &amp; Generators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMPC - Power Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMRO - Robotics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMSU - Sundry DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPBS - Breakers &amp; Switches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPCP - Control Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPCW - Protection, Connection &amp; Wire Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPBP - Building Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPLS - LV Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPSU - Sundry EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LPWA - Wiring Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PACT - Control Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAMA - Marine &amp; Ports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAMP - Measurement &amp; Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAOG - Oil, Gas &amp; Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAPI - Process Industries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PASU - Sundry PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PATU - Turbocharging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGHV - High Voltage Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPMV - Medium Voltage Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGSU - Sundry PGSU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGTR - Transformers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGA - Grid Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGS - Grid Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAPG - Power Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGGI - Grid Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZCCO - Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZCRE - Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZCVA - Various</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua And Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State Of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius And Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia And Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Integration Workstream : R5 : R-2678</description>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>PG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <description>Integration Workstream : R5 : R-2678</description>
        <label>Product Group</label>
        <picklist>
            <controllingField>Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>4113 - PLC &amp; Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4114 - LV High Power Drives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4117 - MV Drives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4119 - Wind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4120 - LV Low Power Drives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4159 - Drives and Controls Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4162 - Sundry DMDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4131 - Motors &amp; Generators Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4133 - LV IEC Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4130 - Large Motors &amp; Generators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4156 - NEMA Motors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4157 - Mechanical Power Transmission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4163 - Sundry DMMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4107 - Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4109 - Power Converters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4111 - EV Charging Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4116 - Power Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4118 - Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4149 - Power Conversion Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4164 - Sundry DMPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4313 - Robot Supply Unit (SU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4314 - Robots &amp; Applications (R&amp;A)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4331 - Robot Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4319 - Robot Systems Paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4321 - Robot Systems Powertrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4329 - Robot Small Part Assembly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4333 - Robotics Customer Service (CS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4336 - Service Robots</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4366 - Sundry DMRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4161 - Sundry DM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Routing_Email_Address__c</fullName>
        <description>Integration Workstream : R5 : R-2678</description>
        <label>Routing Email Address</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <label>Routing Email</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Routing_Email_Address__c</columns>
        <columns>Division__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Product_Group__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RE-{00}</displayFormat>
        <label>Routing Email Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Routing Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>